--- a/05-Express_Start_Building_API/package.json
+++ b/05-Express_Start_Building_API/package.json
@@ -9,7 +9,8 @@
   "author": "Akash More",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
